# utflib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  rcps.txt  rcps_u16.txt  rcps_u8.txt  ru16.txt  ru16.txt.bak
benchmarks/: CMakeLists.txt  behcnmark_data.cpp  benchmark_data.h  u8.cpp  u8_encoding.cpp  u8_iterators.cpp
data/: fread.txt  invalid.txt
old_cmake_configs/: CMakeSettings.json
test/: CMakeLists.txt  byte_manip_tests.cpp  encoder_testdata.cpp  encoder_testdata.h  main.cpp  test_data.cpp  test_data.h  utf16_encoder_tests.cpp  utf16_iterator_alt_tests.cpp  utf16_iterator_tests.cpp  utf16_low_level.cpp  utf16_testdata.cpp  utf16_testdata.h  utf32_iterator_alt_tests.cpp  utf32_iterator_tests.cpp  utf32_low_level.cpp  utf32_testdata.cpp  utf32_testdata.h  utf8_encoder_tests.cpp  utf8_encoders.cpp  utf8_iterator_alt_tests.cpp  utf8_iterator_tests.cpp  utf8_low_level.cpp  utf8_testdata.cpp  utf8_testdata.h
utfchk/: CMakeLists.txt  main.cpp  test.cpp  test.h  utils.cpp  utils.h  wch2mb.cpp
utflib/: CMakeLists.txt
utflib/include/utflib/: byte_manip.h  encoders.h  generic_iterator.h  iterators.h  low_level.h  utflib.h
utflib/src/: encoders.cpp  generic_iterator.cpp  iterators.cpp  low_level.cpp  utflib.cpp
